--- a/IntroToDiscreteMaths/IDMA_Lectures.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Lectures.ipynb
@@ -2749,7 +2749,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Convert list to arrau\n",
+        "# Convert list to array\n",
         "\n",
         "\n",
         "\n",
