--- a/IntroToDiscreteMaths/IDMA_Lectures_Filled.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Lectures_Filled.ipynb
@@ -4682,7 +4682,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Convert list to arrau\n",
+        "# Convert list to array\n",
         "A = [1,3,4,5,6]\n",
         "B = np.array(A)\n",
         "print(A)\n",
