--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -473,7 +473,7 @@
       "cell_type": "code",
       "source": [
         "# Answers to Question 10\n",
-        "letters = ['d','c''b','a','b','c','d',]\n"
+        "letters = ['d','c','b','a','b','c','d',]\n"
       ],
       "metadata": {
         "id": "9MghykvNiJ96"
