--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -1010,7 +1010,7 @@
         "        *    Change the style;\n",
         "        *    Add labels and titles.\n",
         "3.    *    Using the `numpy` or `random` packages to create two random lists/arrays of length 100, called x and y, then make a scatter plot of x against y.\n",
-        "    *    Create a third random list/array call it `values`, and include this in your scatter plot using `scatter(x,y,data=values)`.\n",
+        "    *    Create a third random list/array call it `values`, and include this in your scatter plot using `scatter(x,y,s=values)`.\n",
         "4.   *     Use the `math` package to create a plot of sin.\n",
         "    *    Try and make a figure with 3 plots on showing: sin, cos, and tan."
       ],
