--- a/IntroToDiscreteMaths/IDMA_Further_Questions.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Further_Questions.ipynb
@@ -93,6 +93,21 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Question 28\n",
+        "\n",
+        "Consider the function $$f(x) = x^3+2x^2-x+4$$.\n",
+        "\n",
+        "1.    Plot the function for $-50<x<50$.\n",
+        "2.    Determine where $f(x)$ crosses the $x$ axis (i.e., when $f(x)=0$). Do this by creating a while loop which starts with the pair $(a,b)=(-50,50)$, and at each step computes the mid point $m$ between the two values and if $m$ is positive set $(a,b)=(a,m)$ if it is negative set $(a,b)=(m,b)$. Continue until $f(a)$ and $f(b)$ are both within $0.01$ of $0$.\n",
+        "3.    Use the sympy.diff function to differentiate f(x), and then plot the derivative on the same axis as f(x)."
+      ],
+      "metadata": {
+        "id": "G9uzPen41zgF"
+      }
     }
   ]
 }
