--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -739,7 +739,7 @@
         " *    $i+j=17$.\n",
         "\n",
         "2.    Create a new list called `seventeen_sets` which contains every element of `seventeen` converted into sets.\n",
-        "3.    Create a set called `set_of_seventeen_sets` by converting `seventeen_sets` into a set, and print the new set.\n",
+        "3.    Create a set called `set_of_seventeen` by converting `seventeen` into a set, and print the new set.\n",
         "4.    Create a new list called `seventeen_increasing` containing all pairs from `seventeen` where the first number is smaller than the second, and print the new list.\n",
         "5.    From `seventeen` remove all pairs where the first number is smaller than the second number, and then print the new list (i.e. alter the list in place, rather than create a new list as in part 4).\n",
         "6.   To check you've done 4) and 5) correctly,  verify that `seventeen` and `seventeen_increasing` are equal.\n",
