--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -322,7 +322,7 @@
         "\n",
         "\n",
         "1.   Convert w to a string, call this x and print it.\n",
-        "2.   Convert x to an int, call this y and print it.\n",
+        "2.   Convert w to an int, call this y and print it.\n",
         "3.   Convert y to a boolean, call this z and print it.\n",
         "4.   Convert y to a float, call this a, print a, and check if a and w are equal.\n",
         "5.   Convert w to a float, call this b, print b, and check if b and w are equal.\n"
