--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -551,8 +551,8 @@
       "cell_type": "code",
       "source": [
         "# Question 12b\n",
-        "# This code create a dictionary which convert the strings of the first 5 letters of the alphabet into their position in the alphabet\n",
-        "alphabet_to_number = {a:1, b:2, c:3, d:4, e:5}"
+        "# This code create a dictionary which convert the strings of the last 5 letters of the alphabet into their position in the alphabet\n",
+        "alphabet_to_number = {v:22, w:23, x:24, y:25, z:26}"
       ],
       "metadata": {
         "colab": {
