--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -977,7 +977,7 @@
         "5.    Change some of the entries of M to non zero values.\n",
         "6.    Import `numpy.linalg`.\n",
         "7.    Use `numpy.linalg.det` to compute the determinant of M.\n",
-        "8.    Create two random arrays of shape (3,3), call them A and B, and then multiply them together using `numpy.linalg.matmul`.\n"
+        "8.    Create two random arrays of shape (3,3), call them A and B, and then multiply them together using `numpy.matmul`.\n"
       ],
       "metadata": {
         "id": "IrzAuRkp_MQD"
