--- a/IntroToDiscreteMaths/AlgorithmInvestigation.ipynb
+++ b/IntroToDiscreteMaths/AlgorithmInvestigation.ipynb
@@ -85,7 +85,7 @@
       "cell_type": "markdown",
       "source": [
         "## Task 4\n",
-        "As a group design the faster algorithm you can to get the largest prime factor of $n$.\n",
+        "As a group design the fastest algorithm you can to get the largest prime factor of $n$.\n",
         "\n",
         "How many steps does it take to find the largest prime factor of $n=1023$?\n",
         "\n",
