--- a/IntroToDiscreteMaths/AlgorithmInvestigation.ipynb
+++ b/IntroToDiscreteMaths/AlgorithmInvestigation.ipynb
@@ -176,7 +176,7 @@
         "3.    Increase $steps$ by 1\n",
         "4.    If $i$ is not a factor of $n$ or $i$ not is prime, then go to step 2\n",
         "5.    Print $steps$\n",
-        "6.    Print $factor$\n",
+        "6.    Print $i$\n",
         "\n",
         "\n",
         "You can use the function `isprime(i)` from sympy to check is i is prime in step 4."
