--- a/PureMaths/FoPM_cwk.ipynb
+++ b/PureMaths/FoPM_cwk.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMV42rncz+GBP+IzYc+k7dC",
+      "authorship_tag": "ABX9TyOWzjA/pqz/p2/yk9Taef/P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JasonPSmith/NTUMathsTeaching/blob/main/FoPM_cwk.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JasonPSmith/NTUMathsTeaching/blob/main/PureMaths/FoPM_cwk.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -67,6 +67,7 @@
         "2.   Enter your name below by replace Joe Bloggs with your own name.\n",
         "3.   At the top click \"Runtime\" > \"Run all\"\n",
         "\n",
+        "You do not need to click Show code, for any of the instances below.\n",
         "\n",
         "\n",
         "\n",
@@ -85,7 +86,7 @@
       },
       "outputs": [],
       "source": [
-        "student_num = \"N0202111\"\n",
+        "student_num = \"N0123456\"\n",
         "student_name = \"Joe Bloggs\""
       ]
     },
@@ -237,6 +238,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
         "# Question 1"
       ],
       "metadata": {
@@ -256,35 +262,21 @@
       "cell_type": "code",
       "source": [
         "# @title\n",
-        "runQ1a()"
+        "#runQ1a()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "CNkBPdYKEgD9",
-        "outputId": "d73a917e-21eb-4b7f-baea-778f285547bd",
         "cellView": "form"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "A = {0, 1, 2, 3}\n",
-            "B = {1, 2, 4}\n",
-            "C = {1x | x is an integer}\n"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "## Part a)\n",
         "\n",
-        "Find the elements of each of the following, you can do this by hand or use Python's set operations:\n",
+        "Find the elements of each of the following sets, you can do this by hand or use Python's set operations:\n",
         "\n",
         "\n",
         "1.   $A \\cup B$;\n",
@@ -305,7 +297,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Space for workings if using Python's set operations\n",
+        "#Space for workings\n",
         "\n",
         "\n",
         "\n",
@@ -332,6 +324,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\mbox{}$\n",
+        "\n",
         "## Part b)\n",
         "\n",
         "State whether each of the following is True or False:\n",
@@ -341,8 +335,8 @@
         "2.   $5 \\not\\in B$;\n",
         "3.   $\\emptyset\\subset A$;\n",
         "4.   $\\{2\\} \\subseteq B$;\n",
-        "5.   $|A \\times B| < |A|\\times|B|$.\n",
-        "6.   $(A \\times C) \\cap (B \\times C) = (A \\cap B) \\times C$\n",
+        "5.   $|A \\times B| < |A|\\times|B|$;\n",
+        "6.   $(A \\times C) \\cap (B \\times C) = (A \\cap B) \\times C$.\n",
         "\n",
         "*6 Marks*"
       ],
@@ -375,6 +369,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\mbox{}$\n",
+        "\n",
         "## Part c)\n",
         "\n",
         "Consider the following plot:"
@@ -393,17 +389,17 @@
         "id": "t2_k303P-qlY",
         "cellView": "form"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Write down the interval or Cartesian product of intervals for the following areas in the plot above:\n",
+        "Write down the Cartesian product of intervals for the following areas in the plot above:\n",
         "\n",
         "1.    The green crosshatched area;\n",
         "2.    The solid purple area;\n",
-        "3.    The intersection of the green crosshatched and solid purple areas.\n",
+        "3.    The intersection of the green crosshatched and solid purple areas;\n",
         "4.    The union of the green crosshatched and solid purple areas.\n",
         "\n",
         "*8 Marks*"
@@ -433,6 +429,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
         "# Question 2\n"
       ],
       "metadata": {
@@ -461,7 +472,7 @@
         "id": "b6QyiJjQOrXG",
         "cellView": "form"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,9 +480,9 @@
       "source": [
         "1.    What is the domain of $R$?\n",
         "2.    What is the image of $R$?\n",
-        "3.    Is R a function from $N$ to $N$?\n",
-        "4.    Write down all pairs in the inverse of R.\n",
-        "5.    Is R an equivalence relation\n",
+        "3.    Is $R$ a function from $N$ to $N$?\n",
+        "4.    Write down all pairs in the inverse of $R$.\n",
+        "5.    Is $R$ an equivalence relation\n",
         "\n",
         "*5 Marks*"
       ],
@@ -502,9 +513,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\mbox{}$\n",
+        "\n",
         "## Part b)\n",
         "\n",
-        "Consider the relations two relations T and V, on $\\{0,1,2,3,4\\}$, given below. One is an equivalence relation, and one is not."
+        "Consider the two relations T and V on $\\{0,1,2,3,4\\}$ given below. One is an equivalence relation, and one is not."
       ],
       "metadata": {
         "id": "iggy7fnz37S1"
@@ -520,7 +533,7 @@
         "id": "xe_gq_dXzdZy",
         "cellView": "form"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,8 +568,10 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\mbox{}$\n",
+        "\n",
         "## Part c)\n",
-        "Let f be a function with dom$(f) = [-50,50]$ and codom$(f) = [-40,60]$, given by the plot below."
+        "Let $f$ be a function with dom$(f) = [-50,50]$ and codom$(f) = [-40,60]$, given by the plot below."
       ],
       "metadata": {
         "id": "DmS2mdJnUKcR"
@@ -572,17 +587,17 @@
         "id": "IEcy9XG1VHS0",
         "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "1.    Is f injective?\n",
-        "2.    Is f surjective?\n",
-        "3.    Is f bijective?\n",
-        "4.    Does f have an inverse?\n",
-        "5.    What is the image of f?\n",
+        "1.    Is $f$ injective?\n",
+        "2.    Is $f$ surjective?\n",
+        "3.    Is $f$ bijective?\n",
+        "4.    Does $f$ have an inverse?\n",
+        "5.    What is the image of $f$?\n",
         "\n",
         "\n",
         "*5 Marks*"
@@ -614,6 +629,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\mbox{}$\n",
+        "\n",
         "## Part d)\n",
         "Consider the functions f and g from $\\mathbb{R}$ to $\\mathbb{R}$ given below."
       ],
@@ -631,7 +648,7 @@
         "cellView": "form",
         "id": "Lu5tyzvEvBzo"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -640,8 +657,8 @@
         "Write down each of the following compositions of the functions, using the f and\n",
         " g given above (you do not need to simplify the answer)::\n",
         "1.    g$\\circ$f;\n",
-        "2.    g$\\circ$g.\n",
-        "3.    f$\\circ $g$^{-1}$\n",
+        "2.    g$\\circ$g;\n",
+        "3.    f$\\circ $g$^{-1}$.\n",
         "\n",
         "*4 Marks*"
       ],
@@ -668,6 +685,31 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\mbox{}$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "brSp-nUtTkY_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
+        "$\\mbox{}$\n",
+        "\n",
         "# Question 3"
       ],
       "metadata": {
@@ -687,7 +729,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Consider the set A of permutations of length $3$ (so $A\\subseteq S_3$). Recall that e represents the identity permutation.\n",
+        "Consider the set A given below of permutations of length $3$ (so $A\\subseteq S_3$). Recall that e represents the identity permutation.\n",
         "\n",
         "For this question you can use the function composePerm(a,b) to compose permutations, for example to get the permutation (1,2,3)∘(2,3,1) use `composePerm((1,2,3),(2,3,1))`.\n"
       ],
@@ -705,7 +747,7 @@
         "id": "tn0jQ9zNyv-r",
         "cellView": "form"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,6 +808,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "$\\mbox{}$\n",
+        "\n",
         "##Part b)\n",
         "\n",
         "Let $G = (\\{0,1,2,3,4\\},$op$)$ be a group. You can determine the output of the binary operation a op b by typing `op(a,b)`.\n",
@@ -786,7 +830,7 @@
       "metadata": {
         "id": "X_2vowphAgDD"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,7 +841,7 @@
         "3.    What is the inverse of $1$ in $G$?\n",
         "4.    Is $G$ Abelian?\n",
         "5.    Does $G$ have a subgroup of order 2?\n",
-        "6.    Give an isomorphism $f$ from cyclic group of order $5$ to $G$\n",
+        "6.    Give an isomorphism $f$ from the cyclic group of order $5$ to $G$.\n",
         "\n",
         "*11 Marks*"
       ],
@@ -810,10 +854,15 @@
       "source": [
         "# Enter part 3b answers here:\n",
         "Q3b_answer1 = ReplaceWithAnswer\n",
+        "\n",
         "Q3b_answer2 = ReplaceWithAnswer\n",
+        "\n",
         "Q3b_answer3 = ReplaceWithAnswer\n",
+        "\n",
         "Q3b_answer4 = \"\" #Enter Yes or No between speech marks\n",
+        "\n",
         "Q3b_answer5 = \"\" #Enter Yes or No between speech marks\n",
+        "\n",
         "Q3b_answer6 = \"f(e)= ,f(g)= ,f(g^2)= ,f(g^3)= ,f(g^4)= \" #After each = enter the output of the isomorphism"
       ],
       "metadata": {
