--- a/PureMaths/FoPM_cwk.ipynb
+++ b/PureMaths/FoPM_cwk.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWzjA/pqz/p2/yk9Taef/P",
+      "authorship_tag": "ABX9TyNohXsl5htsmNmEuodGbB2u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,7 +262,7 @@
       "cell_type": "code",
       "source": [
         "# @title\n",
-        "#runQ1a()"
+        "runQ1a()"
       ],
       "metadata": {
         "id": "CNkBPdYKEgD9",
