--- a/PureMaths/FoPM_cwk.ipynb
+++ b/PureMaths/FoPM_cwk.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNohXsl5htsmNmEuodGbB2u",
+      "authorship_tag": "ABX9TyOMJbgzqu8Z1XQoEaBoPdF5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,7 +226,7 @@
         "    elif numbers_to_use_for_individualisation[-1]>4 and numbers_to_use_for_individualisation[-1] < 7:\n",
         "       print(\"A = \"+str(set(S3[:4])))\n",
         "    else:\n",
-        "       print(\"A = \"+str(set(S3[:3]+S3[4])))\n",
+        "       print(\"A = \"+str(set(S3[:3]+[S3[4]])))\n",
         "#xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
       ],
       "metadata": {
