--- a/PureMaths/FoPM_cwk.ipynb
+++ b/PureMaths/FoPM_cwk.ipynb
@@ -67,7 +67,7 @@
         "2.   Enter your name below by replace Joe Bloggs with your own name.\n",
         "3.   At the top click \"Runtime\" > \"Run all\"\n",
         "\n",
-        "You do not need to click Show code, for any of the instances below.\n",
+        "You do not need to click Show code, for any of the instances below. But you should rerun the code each time you open the notebook, again by selecting \"Runtime\" > \"Run all\"\n",
         "\n",
         "\n",
         "\n",
