Added FoPM resit

--- a/IntroToDiscreteMaths/AlgorithmInvestigation_solutions.ipynb
+++ b/IntroToDiscreteMaths/AlgorithmInvestigation_solutions.ipynb
@@ -85,7 +85,7 @@
       "cell_type": "markdown",
       "source": [
         "## Task 4\n",
-        "As a group design the fastest algorithm you can to get the largest prime factor of $n$.\n",
+        "As a group design the faster algorithm you can to get the largest prime factor of $n$.\n",
         "\n",
         "How many steps does it take to find the largest prime factor of $n=1023$?\n",
         "\n",
@@ -128,13 +128,38 @@
       "cell_type": "code",
       "source": [
         "#Implement Algorithm 1 here\n",
-        "from sympy import isprime\n"
+        "from sympy import isprime\n",
+        "n = 1023\n",
+        "factor = 0\n",
+        "steps = 0\n",
+        "i = 1\n",
+        "while i <= n:\n",
+        "    if isprime(i):\n",
+        "        if n % i == 0:\n",
+        "            factor = i\n",
+        "    steps += 1\n",
+        "    i += 1\n",
+        "print(steps)\n",
+        "print(factor)\n"
       ],
       "metadata": {
-        "id": "wwQivRKt88mM"
+        "id": "wwQivRKt88mM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1aff436-5509-4b8a-c7af-3d3c1d8f4aaf"
       },
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1023\n",
+            "31\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -158,13 +183,35 @@
       "cell_type": "code",
       "source": [
         "#Implement Algorithm 2 here\n",
-        "from sympy import primerange\n"
+        "from sympy import primerange\n",
+        "n = 1023\n",
+        "factor = 0\n",
+        "steps = 0\n",
+        "for i in primerange(1,n):\n",
+        "    if n % i == 0 and i > factor:\n",
+        "        factor = i\n",
+        "    steps += 1\n",
+        "print(steps)\n",
+        "print(factor)"
       ],
       "metadata": {
-        "id": "p2GlyMvHFH6b"
+        "id": "p2GlyMvHFH6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "269b9579-47ea-4532-ceaf-650efc2202ea"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "172\n",
+            "31\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -189,13 +236,36 @@
       "cell_type": "code",
       "source": [
         "#Implement Algorithm 3 here\n",
-        "from sympy import isprime\n"
+        "from sympy import isprime\n",
+        "n = 1023\n",
+        "steps = 0\n",
+        "i = 1024\n",
+        "while i > 0:\n",
+        "    i -= 1\n",
+        "    steps += 1\n",
+        "    if n % i == 0 and isprime(i):\n",
+        "        print(steps)\n",
+        "        print(i)\n",
+        "        break"
       ],
       "metadata": {
-        "id": "DMB_s0-9KO9L"
+        "id": "DMB_s0-9KO9L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fabda6ed-81e5-44a1-f79f-a0b262aa264a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "993\n",
+            "31\n"
+          ]
+        }
+      ]
     }
   ]
 }
