--- a/IntroToDiscreteMaths/IDMA_Seminars.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Seminars.ipynb
@@ -322,7 +322,7 @@
         "\n",
         "\n",
         "1.   Convert w to a string, call this x and print it.\n",
-        "2.   Convert x to an int, call this y and print it.\n",
+        "2.   Convert w to an int, call this y and print it.\n",
         "3.   Convert y to a boolean, call this z and print it.\n",
         "4.   Convert y to a float, call this a, print a, and check if a and w are equal.\n",
         "5.   Convert w to a float, call this b, print b, and check if b and w are equal.\n"
@@ -473,7 +473,7 @@
       "cell_type": "code",
       "source": [
         "# Answers to Question 10\n",
-        "letters = ['d','c''b','a','b','c','d',]\n"
+        "letters = ['d','c','b','a','b','c','d',]\n"
       ],
       "metadata": {
         "id": "9MghykvNiJ96"
@@ -551,8 +551,8 @@
       "cell_type": "code",
       "source": [
         "# Question 12b\n",
-        "# This code create a dictionary which convert the strings of the first 5 letters of the alphabet into their position in the alphabet\n",
-        "alphabet_to_number = {a:1, b:2, c:3, d:4, e:5}"
+        "# This code create a dictionary which convert the strings of the last 5 letters of the alphabet into their position in the alphabet\n",
+        "alphabet_to_number = {v:22, w:23, x:24, y:25, z:26}"
       ],
       "metadata": {
         "colab": {
@@ -567,12 +567,12 @@
         {
           "output_type": "error",
           "ename": "NameError",
-          "evalue": "name 'a' is not defined",
+          "evalue": "name 'v' is not defined",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
             "\u001b[0;32m<ipython-input-6-95e7e30c184e>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Question 12b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# This code create a dictionary which convert the the first 5 letters of the alphabet into their position in the alphabet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0malphabet_to_number\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+            "\u001b[0;31mNameError\u001b[0m: name 'v' is not defined"
           ]
         }
       ]
@@ -739,9 +739,9 @@
         " *    $i+j=17$.\n",
         "\n",
         "2.    Create a new list called `seventeen_sets` which contains every element of `seventeen` converted into sets.\n",
-        "3.    Create a set called `set_of_seventeen_sets` by converting `seventeen_sets` into a set, and print the new set.\n",
+        "3.    Create a set called `set_of_seventeen` by converting `seventeen` into a set, and print the new set.\n",
         "4.    Create a new list called `seventeen_increasing` containing all pairs from `seventeen` where the first number is smaller than the second, and print the new list.\n",
-        "5.    From `seventeen` remove all pairs where the first number is smaller than the second number, and then print the new list (i.e. alter the list in place, rather than create a new list as in part 4).\n",
+        "5.    From `seventeen` remove all pairs where the first number is larger than the second number, and then print the new list (i.e. alter the list in place, rather than create a new list as in part 4).\n",
         "6.   To check you've done 4) and 5) correctly,  verify that `seventeen` and `seventeen_increasing` are equal.\n",
         "\n",
         "\n"
@@ -977,7 +977,7 @@
         "5.    Change some of the entries of M to non zero values.\n",
         "6.    Import `numpy.linalg`.\n",
         "7.    Use `numpy.linalg.det` to compute the determinant of M.\n",
-        "8.    Create two random arrays of shape (3,3), call them A and B, and then multiply them together using `numpy.linalg.matmul`.\n"
+        "8.    Create two random arrays of shape (3,3), call them A and B, and then multiply them together using `numpy.matmul`.\n"
       ],
       "metadata": {
         "id": "IrzAuRkp_MQD"
@@ -1010,7 +1010,7 @@
         "        *    Change the style;\n",
         "        *    Add labels and titles.\n",
         "3.    *    Using the `numpy` or `random` packages to create two random lists/arrays of length 100, called x and y, then make a scatter plot of x against y.\n",
-        "    *    Create a third random list/array call it `values`, and include this in your scatter plot using `scatter(x,y,data=values)`.\n",
+        "    *    Create a third random list/array call it `values`, and include this in your scatter plot using `scatter(x,y,s=values)`.\n",
         "4.   *     Use the `math` package to create a plot of sin.\n",
         "    *    Try and make a figure with 3 plots on showing: sin, cos, and tan."
       ],
