resit to referral

--- a/IntroToDiscreteMaths/IDMA_Coursework_resit.ipynb
+++ b/IntroToDiscreteMaths/IDMA_Coursework_resit.ipynb
@@ -16,7 +16,7 @@
         "\n",
         "**Format**: Jupyter Notebook\n",
         "\n",
-        "**Assessment** Resit\n",
+        "**Assessment** Referral\n",
         "\n",
         "**Contribution to module**: 40%\n",
         "\n",
